{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "vrInput",
            "id": "0d24efcc-8a86-4d86-bfb6-d5cab63a2d91",
            "actions": [
                {
                    "name": "LeftHandDrawing",
                    "type": "Value",
                    "id": "e0a6a59e-6ff6-4f23-a816-7ae331cf21bc",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightHandDrawing",
                    "type": "Value",
                    "id": "b40248db-c778-42ba-8ba4-55a09fdb07e3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightPinch",
                    "type": "Value",
                    "id": "0cdff918-561a-4b35-904a-52c6d2c45b60",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftPinch",
                    "type": "Value",
                    "id": "fb4c121a-21cf-43f2-9a7f-dbfd91181d27",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "4cf8deb9-40f3-47fa-ad18-e4fba4dfe15c",
                    "path": "<XRController>{LeftHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftHandDrawing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5492575-bfb9-425b-83cf-9ddb724cb83a",
                    "path": "<XRController>{RightHand}/{Trigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightHandDrawing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50b69f31-be9b-4c7c-9535-2fe4f3619988",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightPinch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ec919689-7691-472b-ab53-c10cff01615d",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftPinch",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}